tests/parser/argument_validation/test_17.m.octave.out
In test_17.m, line 4
|     arguments
|     ^^^^^^^^^ style: end statement with a semicolon [end_of_statements]
In test_17.m, line 5
|         width double
|               ^^^^^^ style: end statement with a semicolon [end_of_statements]
In test_17.m, line 6
|         height double
|                ^^^^^^ style: end statement with a semicolon [end_of_statements]
In test_17.m, line 7
|         options.LineStyle (1,1) string = "-"
|                                 ^^^^^^ error: expected end of statement, found IDENTIFIER instead
MISS_HIT Debug Summary: 1 file(s) analysed, 3 style issue(s), 1 error(s)
